--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -62,7 +62,12 @@
    "source": [
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
+    "  lower_a = lower(word_a)\n",
+    "  lower_b = lower(word_b)\n",
+    "\n",
+    "  # Check if the length of both strings is the same\n",
+    "  if len(lower_a) !=  len(lower_b):\n",
+    "    return False \n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Slient\", \"listen\")"
