--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -98,8 +98,11 @@
       "source": [
         "with open(all_paths[0], 'r') as f:\n",
         "    # YOUR CODE HERE: Use the readline() or readlines() method to read the .csv file into 'contents'\n",
-        "    \n",
-        "    # YOUR CODE HERE: Iterate through 'contents' using a for loop and print each row for inspection"
+        "    contents = f.readlines()\n",
+        "\n",
+        "    # YOUR CODE HERE: Iterate through 'contents' using a for loop and print each row for inspection\n",
+        "    for row in contents:\n",
+        "        print(row)"
       ]
     },
     {
@@ -133,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "82-bk4CBB1w4"
       },
@@ -146,21 +149,26 @@
         "    data = np.loadtxt(fname=file_path, delimiter=',')\n",
         "    ax = 1  # this specifies that the operation should be done for each row (patient)\n",
         "\n",
+        "    summary_values = None\n",
+        "\n",
         "    # implement the specific operation based on the 'operation' argument\n",
         "    if operation == 'mean':\n",
         "        # YOUR CODE HERE: calculate the mean (average) number of flare-ups for each patient\n",
+        "        summary_values = data.mean(axis=ax)\n",
         "\n",
         "    elif operation == 'max':\n",
         "        # YOUR CODE HERE: calculate the maximum number of flare-ups experienced by each patient\n",
+        "        summary_values = data.max(axis=ax)\n",
         "\n",
         "    elif operation == 'min':\n",
         "        # YOUR CODE HERE: calculate the minimum number of flare-ups experienced by each patient\n",
+        "        summary_values = data.min(axis=ax)\n",
         "\n",
         "    else:\n",
         "        # if the operation is not one of the expected values, raise an error\n",
         "        raise ValueError(\"Invalid operation. Please choose 'mean', 'max', or 'min'.\")\n",
         "\n",
-        "    return summary_values"
+        "    return summary_values\n"
       ]
     },
     {
@@ -232,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "_svDiRkdIwiT"
       },
@@ -255,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "LEYPM5v4JT0i"
       },
@@ -265,8 +273,9 @@
         "\n",
         "def detect_problems(file_path):\n",
         "  #YOUR CODE HERE: use patient_summary() to get the means and check_zeros() to check for zeros in the means\n",
+        "  check_data = patient_summary(file_path, 'mean')\n",
         "\n",
-        "  return"
+        "  return check_zeros(check_data)"
       ]
     },
     {
